--- a/layout_demo/5xruby_bs/test.html
+++ b/layout_demo/5xruby_bs/test.html
@@ -23,14 +23,37 @@
   </head>
   <body>
 
-    <section class="header container-fluid">
-      <header class="row">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero repellendus magni sunt enim repellat illo fuga, ducimus excepturi aliquam accusantium earum nisi quod quidem expedita tempora reiciendis laborum quisquam inventore! Aliquid consectetur facere vitae labore fugiat deleniti aliquam mollitia amet, laborum autem reprehenderit necessitatibus enim saepe impedit ea voluptatem laboriosam veritatis eum asperiores nisi beatae suscipit! Quod itaque facilis eveniet veniam tempora quidem saepe quae totam beatae porro dolor ea libero et consequatur eum tenetur praesentium doloremque, nobis molestias architecto doloribus eos! Hic nihil aliquid quam nam repudiandae est veritatis obcaecati, quia alias porro veniam magnam similique fuga molestias voluptates!</p>
-      </header>
-      <nav class="row">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo sunt ex inventore tempore quasi nobis, officia provident assumenda dolorum quae dolore porro distinctio debitis eligendi quos fugit dolor minima necessitatibus, illo itaque, ipsa adipisci odit eveniet. Vero molestias odit cupiditate amet cum consectetur facere necessitatibus nam esse! Ipsum ut pariatur ratione, ullam alias quos. Fugit perferendis iusto amet aut! Ut dolor tenetur distinctio est aspernatur ratione maiores aliquid quo autem iste perferendis unde similique veritatis pariatur possimus, adipisci sequi fuga? Quibusdam ut debitis iusto nihil odio eveniet quod? Voluptate, sunt assumenda. Quibusdam quis sint impedit eligendi labore facilis eum! Maxime!</p>
-      </nav>
-    </section>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
